--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,3 +18,19 @@ ul {
 #gallery li {
   margin-right: 10px;
 }
+
+#validation-input {
+  border: 3px solid #bdbdbd;
+}
+
+#validation-input.valid {
+  border-color: #4caf50;
+}
+
+#validation-input.invalid {
+  border-color: #f44336;
+}
+
+input {
+  display: table;
+}
